[DSPlayer] - fixed build - vs2010 sync
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/dsplayer@29468 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/project/VS2008Express/XBMC.vcproj
+++ b/project/VS2008Express/XBMC.vcproj
@@ -2556,6 +2556,7 @@
 							</FileConfiguration>
 							<FileConfiguration
 								Name="Release (DirectX)|Win32"
+								ExcludedFromBuild="true"
 								>
 								<Tool
 									Name="VCCLCompilerTool"
@@ -2686,14 +2687,6 @@
 						</File>
 						<File
 							RelativePath="..\..\xbmc\cores\DSPlayer\Subtitles\decss\DeCSSInputPin.h"
-							>
-						</File>
-						<File
-							RelativePath="..\..\xbmc\cores\DSPlayer\DShowUtil\fourcc_guids.h"
-							>
-						</File>
-						<File
-							RelativePath="..\..\xbmc\cores\DSPlayer\DShowUtil\ITrackInfo.h"
 							>
 						</File>
 					</Filter>
