added: addon info dialog. my skinning is a joke as usual
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@29476 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/Makefile.in
+++ b/xbmc/Makefile.in
@@ -118,6 +118,7 @@ SRCS=Application.cpp \
      Song.cpp \
      VideoDatabase.cpp \
      ViewDatabase.cpp \
+     GUIDialogAddonInfo.cpp \
      GUIDialogAddonSettings.cpp \
      GUIDialogAudioSubtitleSettings.cpp \
      GUIDialogBoxBase.cpp \
