[DSPlayer] fixed: cleaner solution than r29470
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/dsplayer@29481 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/project/VS2008Express/XBMC.vcproj
+++ b/project/VS2008Express/XBMC.vcproj
@@ -127,7 +127,7 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				CommandLine="win32addconfig.bat"
+				CommandLine="copy &quot;$(SolutionDir)..\..\xbmc\cores\dvdplayer\Codecs\ffmpeg\win32_config.h&quot; &quot;$(SolutionDir)..\..\xbmc\cores\dvdplayer\Codecs\ffmpeg\config.h&quot;"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -222,7 +222,7 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				CommandLine="win32addconfig.bat"
+				CommandLine="copy &quot;$(SolutionDir)..\..\xbmc\cores\dvdplayer\Codecs\ffmpeg\win32_config.h&quot; &quot;$(SolutionDir)..\..\xbmc\cores\dvdplayer\Codecs\ffmpeg\config.h&quot;"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
