--- a/xbmc/visualizations/WaveForm/Waveform.vcproj
+++ b/xbmc/visualizations/WaveForm/Waveform.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="9.00"
 	Name="visWaveform"
 	ProjectGUID="{D450FE9A-CE56-4496-B4AB-379094E642F2}"
 	RootNamespace="visWaveform"
@@ -218,7 +218,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="opengl32.lib glu32.lib"
-				OutputFile="../../../addons/vis.waveform/Waveform_win32.vis"
+				OutputFile="../../../addons/visualisation.waveform/Waveform_win32.vis"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/Waveform.pdb"
