--- a/xbmc/cores/dvdplayer/DVDCodecs/Video/Makefile.in
+++ b/xbmc/cores/dvdplayer/DVDCodecs/Video/Makefile.in
@@ -8,6 +8,7 @@ SRCS=	DVDVideoCodecFFmpeg.cpp \
 	DVDVideoPPFFmpeg.cpp \
 	VDPAU.cpp \
 	VAAPI.cpp \
+	DVDVideoCodecVDA.cpp \
 	DVDVideoCodecCrystalHD.cpp \
 
 LIB=Video.a
