[WIN32] [VS2010] Removed/updated headers 'cause it conflicted with vs2010 up-to-date check
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@29654 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/cores/paplayer/vgmstream/win32/win32.vcxproj
+++ b/xbmc/cores/paplayer/vgmstream/win32/win32.vcxproj
@@ -71,7 +71,7 @@
     <Link>
       <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <ProgramDatabaseFile>win32.pdb</ProgramDatabaseFile>
+      <ProgramDatabaseFile>$(OutDir)\$(TargetName).pdb</ProgramDatabaseFile>
       <SubSystem>Windows</SubSystem>
       <ProfileGuidedDatabase>
       </ProfileGuidedDatabase>
@@ -100,7 +100,7 @@
     <Link>
       <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <ProgramDatabaseFile>$(TargetName).pdb</ProgramDatabaseFile>
+      <ProgramDatabaseFile>$(OutDir)\$(TargetName).pdb</ProgramDatabaseFile>
       <SubSystem>Windows</SubSystem>
       <OptimizeReferences>true</OptimizeReferences>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
