--- a/skin/Confluence/media/Makefile
+++ b/skin/Confluence/media/Makefile
@@ -253,6 +253,7 @@ IMAGES= \
 	OSDRandomOnFO.png \
 	OSDRandomOnNF.png \
 	OSDRecord2.png \
+	OSDRecordNF2.png \
 	OSDRecordFO.png \
 	OSDRecordNF.png \
 	OSDRecordOff.png \
